# Cost_Minimasation_ML

./: README.md  pyproject.toml  structure.py
.zen/: config.yaml
artifacts/: best_model_20251022_232321.pkl  best_model_20251025_005037.pkl
config/: xgbclassifier.yaml
frontend/: app.py
models/: Xgboost_base.pkl
models/tuned/: Xgboost_tuned.pkl  xgbclassifier_optuna_tuned.pkl
notebooks/: EDA.ipynb  test.ipynb
notebooks/models/tuned/: xgbclassifier_optuna_tuned.pkl
pipeline/: run.py  training_pipeline.py
src/: Data_Samplier.py  Data_ingestor.py  Ingest_Data.py  Missing_value_handling.py  Model_Builder.py  Model_Evaluator.py  Model_Loader.py  Model_Selector.py  Model_Tuner.py  api.py  logger.py  main.py  scaler.py
steps/: Data_Ingestion_Steps.py  Data_Sampling_Steps.py  Data_Split_Steps.py  Missing_data_Handling_Steps.py  Model_Evaluation_Steps.py  Model_Selection_Steps.py  Model_Tuning_Steps.py
