[project]
name = "predictive-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.0.3",
    "fastapi>=0.115.12",
    "imbalanced-learn>=0.13.0",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "mlflow>=3.1.0",
    "optuna>=4.5.0",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
    "uvicorn>=0.34.3",
    "xgboost>=3.0.1",
    "zenml[local]>=0.83.0",
]
